# SocNet

./: +proiect.txt
ProiectRCClient/: ProiectRCClient.pro  addfriend.cpp  addfriend.h  addfriend.ui  chat.cpp  chat.h  chat.ui  client.cpp  client.h  createchat.cpp  createchat.h  createchat.ui  friend.cpp  friend.h  friend.ui  homepage.cpp  homepage.h  homepage.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profileedit.cpp  profileedit.h  profileedit.ui  register.cpp  register.h  register.ui  structs.h  viewchats.cpp  viewchats.h  viewchats.ui
ProiectRCServer/: CMakeLists.txt  VirtualSoc.db  main.cpp
ProiectRCServer/Database/: Database.cpp  Database.h
ProiectRCServer/Server/: Server.cpp  Server.h
ProiectRCServer/Structs/: Structs.h
